# Inventar

./: .gitignore  LICENSE  README.md  inventory.csv  inventory_config.example.json  main.py  pyproject.toml  requirements.txt
inventory_app/: __init__.py  constants.py  core.py  main_window.py  repository.py  styles.py
inventory_app/dialogs/: __init__.py  bulk_update_dialog.py  device_dialog.py  header_filter_dialog.py  master_data_dialog.py  settings_dialog.py
tests/: test_core.py  test_repository.py
