[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "inventarsystem"
version = "1.0.0"
description = "Inventarsystem für elektronische Geräte (PyQt5)"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
dependencies = [
    "PyQt5==5.15.9",
    "pandas==2.2.3",
]

[project.optional-dependencies]
dev = ["pytest==8.3.4"]

[project.scripts]
inventarsystem = "main:main"

[tool.setuptools]
packages = ["inventory_app", "inventory_app.dialogs"]
py-modules = ["main"]

[tool.setuptools.package-data]
inventory_app = ["assets/*.svg"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py38"
